# generate-peer-registry-args

./: .env.example  Cargo.toml  README.md
src/: main.rs
